<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:viewBindingIgnore="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="TODO"
        android:src="@drawable/shopping" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_user_login"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/blue"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/str_username"
        android:text="kminchelle"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="0lelplR"
        android:layout_marginVertical="6dp"
        android:hint="@string/str_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login" />

</LinearLayout>