<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductDetailsActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:src="@drawable/shopping"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">


        <TextView
            android:id="@+id/productNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_product_name"
            android:textAppearance="?attr/textAppearanceHeadline6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_product_desc"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>
        <TextView
            android:id="@+id/productDescTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/str_product_desc"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productPriceTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/str_product_price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/productStockTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/str_product_price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>